--- a/BibliotecaEISI(Proyecto)/bin/AndroidManifest.xml
+++ b/BibliotecaEISI(Proyecto)/bin/AndroidManifest.xml
@@ -7,8 +7,10 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -139,6 +141,10 @@
         <activity
             android:name="sv.ues.eisi.fia.bibliotecaeisi.MenuUsuarioActivity"
             android:label="@string/title_activity_menu_usuario" >
+        </activity>
+        <activity
+            android:name="sv.ues.eisi.fia.bibliotecaeisi.TomarFotoDocumentoActivity"
+            android:label="@string/title_activity_tomar_foto" >
         </activity>
     </application>
 
